# whatsapp-chatbot-smartprints

./: .gitignore  README.md  pyproject.toml
whatsapp_chatbot_smartprints/: agent.txt  config.py  main.py  routes.py  utility.py
whatsapp_chatbot_smartprints/chromadb/: chroma.sqlite3
whatsapp_chatbot_smartprints/docs/: faq_sk_ar.txt  faq_sr_ar.txt  faqs2.txt  faqs_sk.txt  main.txt  main_ar.txt
whatsapp_chatbot_smartprints/services/: chroma_service.py  llm_service.py  webhook_service.py
whatsapp_chatbot_smartprints/structs/: session.py
whatsapp_chatbot_smartprints/templates/: chat.yaml  query_translation.yaml  summary.yaml  system.yaml  topic.yaml
