[tool.poetry]
name = "whatsapp-chatbot-smartprints"
version = "0.1.0"
description = ""
authors = ["abdelmalek0 <djamaa.abdelmalek98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
httpx = "^0.27.0"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.2"
pysqlite3-binary = "^0.5.3"
bs4 = "^0.0.2"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
