[tool.poetry]
name = "whatsapp-chatbot-smartprints"
version = "0.1.0"
description = ""
authors = ["abdelmalek0 <djamaa.abdelmalek98@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
python-dotenv = "^1.0.1"
flask-cors = "^4.0.1"
httpx = "^0.27.0"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
langchainhub = "^0.1.21"
langchain-chroma = "^0.1.2"
bs4 = "^0.0.2"
lxml = "^5.3.0"
asyncio = "^3.4.3"
icecream = "^2.1.3"
openai-whisper = {git = "https://github.com/openai/whisper.git"}
speechrecognition = "^3.10.4"
pydub = "^0.25.1"
pipwin = "^0.5.2"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
